--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -59,7 +59,7 @@
         <li><a href="https://instagram.com/{{ author.instagram }}"><i class="fab fa-fw fa-instagram" aria-hidden="true"></i> Instagram</a></li>
       {% endif %}
       {% if author.fotocommunity %}
-        <li><a href="www.fotocommunity.de/user_photos/{{ author.fotocommunity }}"><i class="fab fa-fw fa-instagram" aria-hidden="true"></i> Fotocommunity</a></li>
+        <li><a href="https://www.fotocommunity.de/user_photos/{{ author.fotocommunity }}"><i class="fab fa-fw fa-instagram" aria-hidden="true"></i> Fotocommunity</a></li>
       {% endif %}
       {% if author.tumblr %}
         <li><a href="https://{{ author.tumblr }}.tumblr.com"><i class="fab fa-fw fa-tumblr-square" aria-hidden="true"></i> Tumblr</a></li>
