--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -84,7 +84,8 @@
 
   img {
     max-width: 175px;
-
+    border-radius: 10%;
+     
     @include breakpoint($large) {
       padding: 5px;
       border: 1px solid $border-color;
